--- a/assemblyscript/package.json
+++ b/assemblyscript/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "chomp test",
+    "test": "chomp test"
   },
   "author": "",
   "license": "ISC",
