--- a/assemblyscript/package.json
+++ b/assemblyscript/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@assemblyscript/wasi-shim": "^0.1.0",
     "assemblyscript": "^0.27.14",
     "bats": "^1.10.0",
     "bats-assert": "^2.0.0",
@@ -25,7 +26,7 @@
   },
   "dependencies": {
     "@assemblyscript/loader": "^0.27.14",
-    "@assemblyscript/wasi-shim": "^0.1.0",
-    "as-wasi": "^0.6.0"
+    "as-wasi": "^0.6.0",
+    "wasi": "^0.0.6"
   }
 }
