--- a/assemblyscript/chompfile.toml
+++ b/assemblyscript/chompfile.toml
@@ -28,6 +28,7 @@ deps = [':run:src/interp-mp']
 
 [[task]]
 name = 'test'
+serial = true
 deps = [':build:./src/test-exports', './tests/*.js', ':tap', ':bats']
 
 [[task]]
