--- a/assemblyscript/chompfile.toml
+++ b/assemblyscript/chompfile.toml
@@ -15,6 +15,15 @@ run = '''
 '''
 
 [[task]]
+name = 'build-release:#'
+targets = ['./build/#-release.wasm', './build/#-release.wat']
+deps = ['##.ts', './src/*.ts']
+run = '''
+  rm -f ./build/$MATCH-release.wasm
+  asc $DEP --target release --outFile ./build/$MATCH-release.wasm --textFile ./build/$MATCH-release.wat
+'''
+
+[[task]]
 name = 'run:#'
 deps = ['##.ts']
 run = '''
@@ -49,8 +58,8 @@ run = '''
 name = 'bench:#'
 deps = ['##.ts']
 run = '''
-  chomp build:$MATCH
-  hyperfine 'wasmtime ./build/$MATCH.wasm'
+  chomp build-release:$MATCH
+  hyperfine --warmup 10 'wasmtime ./build/$MATCH-release.wasm'
 '''
 
 [[task]]
