--- a/assemblyscript/package.json
+++ b/assemblyscript/package.json
@@ -9,12 +9,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@assemblyscript/wasi-shim": "^0.1.0",
-    "assemblyscript": "^0.27.14",
+    "@assemblyscript/loader": "^0.27.22",
+    "@extism/extism": "^1.0.0-rc7",
+    "assemblyscript": "^0.27.22",
     "bats": "^1.10.0",
     "bats-assert": "^2.0.0",
     "bats-support": "^0.2.0",
-    "suppress-experimental-warnings": "^1.1.17",
     "tap": "^18.6.1"
   },
   "type": "module",
@@ -25,8 +25,7 @@
     }
   },
   "dependencies": {
-    "@assemblyscript/loader": "^0.27.14",
-    "as-wasi": "^0.6.0",
-    "wasi": "^0.0.6"
+    "@assemblyscript/wasi-shim": "^0.1.0",
+    "@extism/as-pdk": "^1.0.0-rc1"
   }
 }
