--- a/assemblyscript/chompfile.toml
+++ b/assemblyscript/chompfile.toml
@@ -35,7 +35,7 @@ run = '''
 
 [[task]]
 name = 'example'
-deps = [':run:src/example']
+deps = [':run:src/example-interp']
 
 [[task]]
 name = 'test'
@@ -85,7 +85,7 @@ run = 'node --no-warnings ./repl.js'
 
 [[task]]
 name = 'build-cli'
-deps = [':build:./src/run']
+deps = [':build-release:./src/run']
 run = '''
 sh ./hermit.com -f Hermitfile -o ./build/cli.com
 chmod +x ./build/cli.com
