improved readby lone, added mod, pow

--- a/assemblyscript/chompfile.toml
+++ b/assemblyscript/chompfile.toml
@@ -105,22 +105,12 @@ sh ./hermit.com -f Hermitfile -o ./build/cli.com
 chmod +x ./build/cli.com
 '''
 
-# [[task]]
-# name = 'pp:#'
-# deps = ['##', ':build-cli']
-# serial = true
-# invalidation = 'always'
-# validation = 'none'
-# run = '''
-#   ../deno/bin/ff compile $MATCH --opt --disassemble | ./build/cli.com --silent
-# '''
-
 [[task]]
 name = 'pp:#'
-deps = ['##', ':build:src/plugin']
+deps = ['##', ':build:src/repl']
 serial = true
 invalidation = 'always'
 validation = 'none'
 run = '''
-  ../deno/bin/ff compile $MATCH --opt --disassemble | ./run.js
+  ../deno/bin/ff compile $MATCH --opt --disassemble | wasmtime ./build/src/repl.wasm --silent
 '''
