--- a/assemblyscript/tsconfig.json
+++ b/assemblyscript/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "./node_modules/assemblyscript/std/assembly.json",
-  "include": ["./**/*.ts", "tests/MpZ.js"]
+  "include": ["./**/*.ts", "tests/MpZ.bak"]
 }
