--- a/assemblyscript/asconfig-wasi.json
+++ b/assemblyscript/asconfig-wasi.json
@@ -21,5 +21,6 @@
       "maxMemory": true,
       "exportStart": false
     }
-  }
+  },
+  "extends": "./node_modules/@assemblyscript/wasi-shim/asconfig.json"
 }
