--- a/assemblyscript/package.json
+++ b/assemblyscript/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "chomp test"
+    "test": "chomp test",
+    "format": "prettier ."
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,8 @@
     "@as-pect/cli": "^8.1.0",
     "@extism/extism": "^1.0.0-rc7",
     "assemblyscript": "^0.27.22",
+    "assemblyscript-prettier": "^3.0.1",
+    "prettier": "^3.0.0",
     "tap": "^18.6.1"
   },
   "type": "module",
