--- a/assemblyscript/package.json
+++ b/assemblyscript/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@as-pect/cli": "^8.1.0",
+    "@as-tral/cli": "^2.0.1",
     "@extism/extism": "^1.0.0-rc7",
     "assemblyscript": "^0.27.22",
     "assemblyscript-prettier": "^3.0.1",
