--- a/assemblyscript/package.json
+++ b/assemblyscript/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "assemblyscript",
-  "version": "1.0.0",
+  "name": "as-f-flat-minor",
+  "version": "0.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
